Changes to allocated ram